SERVER-48276 ReplSet Free Monitoring URLs inconsistent

(cherry picked from commit 4ec400290afe55c470cb14fbafb79e9f649d7cb1)