jstests/free_mon/free_mon_rs_register.js
@@ -30,6 +30,7 @@ load("jstests/free_mon/libs/free_mon.js");
 
     WaitForRegistration(rst.getPrimary());
     WaitForRegistration(rst.getSecondary());
+    ValidateFreeMonReplicaSet(rst);
 
     const last_register = mock_web.query("last_register");
     print(tojson(last_register));
