jstests/free_mon/libs/mock_http_server.py
@@ -131,11 +131,15 @@ class FreeMonHandler(http.server.BaseHTTPRequestHandler):
                 'reportingInterval': bson.int64.Int64(1),
             })
         else:
+            reg_id = 'mock123_' + str(stats.register_calls)
+            if 'id' in decoded_doc:
+                reg_id = decoded_doc['id']
+
             data = bson.BSON.encode({
                 'version': bson.int64.Int64(1),
                 'haltMetricsUploading': False,
-                'id': 'mock123',
-                'informationalURL': 'http://www.example.com/123',
+                'id': reg_id,
+                'informationalURL': 'http://www.example.com/' + reg_id,
                 'message': 'Welcome to the Mock Free Monitoring Endpoint',
                 'reportingInterval': bson.int64.Int64(1),
                 'userReminder':
